# AP2024_openCV

./: README.md  camera.md  final.md  preparation.md
01/: CMakeCache.txt  CMakeLists.txt  Makefile  Practice01.cpp  cmake_install.cmake  first_opencv.md  main  opencvTest_b_c.cpp  opencvTest_blur.cpp  opencvTest_first.cpp
02/: CMakeCache.txt  CMakeLists.txt  Makefile  Practice02.cpp  cmake_install.cmake  main  opencvTest_movie_blur.cpp  second_opencv.md
03/: third_opencv.md
04/: forth_opencv.md
